implemented norm function

--- a/tests/playground.html
+++ b/tests/playground.html
@@ -4,14 +4,7 @@
 <script src="lib/test.js" type="text/javascript"></script>
 <script src="../build/oxymath.dev.js" type="text/javascript"></script>
 <script type="text/javascript">
-	testSection("Easy test suite", function(){
-		test(true, "This one passed");
-		test(true, "This one passed");
-	});
-	
-	testSection("FAILED GROUP", function(){
-		test(true, "This one passed");
-		test(false, "This one failed");
+	testSection("PLAYGROUND", function(){
 	});			
 </script>
 </html>
