--- a/tests/composite.test.html
+++ b/tests/composite.test.html
@@ -6,6 +6,8 @@
 <script src="../build/oxymath.dev.js" type="text/javascript"></script>
 
 <script src="units/Matrix.Initialization.js" type="text/javascript"></script>
-
+<script src="units/Matrix.isSameSize.js" type="text/javascript"></script>
+<script src="units/Matrix.isEqual.js" type="text/javascript"></script>
+<script src="units/Matrix.Plus.js" type="text/javascript"></script>
 
 </html>
