zero determinant fix
det() works great now when matrix is singular

--- a/tests/composite.test.html
+++ b/tests/composite.test.html
@@ -11,5 +11,6 @@
 <script src="units/Matrix.isSameSize.js" type="text/javascript"></script>
 <script src="units/Matrix.isEqual.js" type="text/javascript"></script>
 <script src="units/Matrix.Plus.js" type="text/javascript"></script>
-
+<script src="units/Matrix.exchangeRows.js" type="text/javascript"></script>
+<script src="units/Matrix.forEach.js" type="text/javascript"></script>
 </html>
